[tool.poetry]
name = "cablemap-core"
version = "0.2.0"
description = "cablegate corpus parser"
authors = ["fccoelho <fccoelho@gmail.com>"]
license = "MIT"
packages = [
    { include =  "cablemap" }
]

[tool.poetry.dependencies]
python = "^3.10"
gensim = "^4.2.0"

[tool.poetry.dev-dependencies]
black = "*"
autoflake8 = "*"
mypy = "^0.971"
pytest = "^7.1.3"
coverage = "^6.4.4"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
typeguard = "^2.13.3"
nox-poetry = "^1.0.1"
safety = "^2.2.0"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
